--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<!-- Summer Game -->
 				<section class="my-row flex-swap">
 					<div class="col-left">
-						<img src="/images/137-72796.webp" alt="" />
+						<img src="images/137-72796.webp" alt="" />
 					</div>
 					<div class="col-right">
 						<div class="inner-text">
@@ -82,7 +82,7 @@
 
 				<section class="my-row">
 					<div class="col-left">
-						<img src="/images/137-72801.jpg" alt="" />
+						<img src="images/137-72801.jpg" alt="" />
 					</div>
 					<div class="col-right">
 						<div class="inner-text">
@@ -99,7 +99,7 @@
 
 				<section class="my-row">
 					<div class="col-left lightBG">
-						<img src="/images/137-72037.webp" alt="" />
+						<img src="images/137-72037.webp" alt="" />
 					</div>
 					<div class="col-right lightBG">
 						<div class="inner-text">
@@ -133,7 +133,7 @@
 				<section class="my-row flexTwo">
 					<div class="col-left lightBG">
 						<div class="imgFlex2">
-							<img src="/images/137-70203.webp" alt="" />
+							<img src="images/137-70203.webp" alt="" />
 						</div>
 						<div class="inner-text">
 							<h2 class="drk-h2">Order and pick up. Easy as that.</h2>
@@ -146,7 +146,7 @@
 					</div>
 					<div class="col-right lightBG">
 						<div class="imgFlex2">
-							<img src="/images/137-71361.jpg" alt="" />
+							<img src="images/137-71361.jpg" alt="" />
 						</div>
 						<div class="inner-text">
 							<h2 class="drk-h2">Earning 4,500 Bonus Stars is Super Starifying</h2>
@@ -162,7 +162,7 @@
 
 				<section class="my-row flex-swap">
 					<div class="col-left lightBG">
-						<img src="/images/137-72800.webp" alt="" />
+						<img src="images/137-72800.webp" alt="" />
 					</div>
 					<div class="col-right lightBG">
 						<div class="inner-text">
