--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<header>
 			<div class="header-container">
 				<div class="brand">
-					<img src="/images/starbucks logo.png" alt="" class="logo-img" />
+					<img src="images/starbucks logo.png" alt="" class="logo-img" />
 				</div>
 
 				<nav class="navbar" id="nav-bar">
@@ -115,7 +115,7 @@
 
 				<section class="my-row flex-swap">
 					<div class="col-left lightBG">
-						<img src="/images/137-72236.webp" alt="" />
+						<img src="images/137-72236.webp" alt="" />
 					</div>
 					<div class="col-right lightBG">
 						<div class="inner-text">
