--- a/index.html
+++ b/index.html
@@ -367,6 +367,6 @@
 			</div>
 		</footer>
 
-		<script src="app.js"></script>
+		<script src="app.js" type="text/javascript"></script>
 	</body>
 </html>
